# varde

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.example.yml  rust-toolchain.toml  rust.md
.github/workflows/: ci.yml  release.yml
examples/: config.httpbin.json
src/: check.rs  config.rs  heartbeat.rs  lib.rs  main.rs  notify.rs  schedule.rs  server.rs  state.rs
tests/: e2e.rs
tests/fixtures/: full.json  production.json
