[package]
name = "varde"
version = "0.1.0"
edition = "2024"
license = "ISC"
description = "Minimal uptime monitor: HTTP checks, dead man's switch heartbeat, ntfy notifications"
repository = "https://github.com/bendiksolheim/varde"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
